fix: task_id=1156867193003071659 overflow lost

--- a/src/pages/editor/index.module.less
+++ b/src/pages/editor/index.module.less
@@ -40,6 +40,7 @@
   bottom: @gap;
   left: @gap;
   z-index: 9;
+  overflow: auto;
   background: #fff;
 }
 
